Update from deprecated

--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
+jdbc.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 jdbc.databaseurl=jdbc:postgresql://localhost/simulator
 jdbc.username=simulator
 jdbc.password=simulator
