UPDATE YOUR jdbc.properties file. Use JPA calls instead of straight hibernate calls. This allows removing hibernate.cfg.xml control file through LocalContainerEntityManagerFactoryBean.

--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,5 +1,4 @@
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.dialect=org.hibernate.dialect.PostgreSQL82Dialect
-jdbc.databaseurl=jdbc:postgresql://localhost/simulator
-jdbc.username=simulator
-jdbc.password=simulator
+database.driverClassName=org.postgresql.Driver
+database.url=jdbc:postgresql://localhost:5432/ags
+database.username=ags_user
+database.password=ags_user
