--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,13 @@
             <artifactId>logback-classic</artifactId>
             <version>0.9.24</version>
         </dependency>
+        <!--  Gson: Java to Json conversion -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
