--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,18 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>ee.ut.physic.aerosol.simulator.Launcher</mainClass>
-                                </transformer>
+                                </transformer> 
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                        			<resource>META-INF/spring.handlers</resource>
+                    			</transformer>
+                    			<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                        			<resource>META-INF/spring.schemas</resource>
+                   				 </transformer>
                             </transformers>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                    		<finalName>simulator</finalName>
                         </configuration>
                     </execution>
                 </executions>
