--- a/pom.xml
+++ b/pom.xml
@@ -36,18 +36,21 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>ee.ut.physic.aerosol.simulator.Launcher</mainClass>
-                                </transformer> 
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                        			<resource>META-INF/spring.handlers</resource>
-                    			</transformer>
-                    			<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                        			<resource>META-INF/spring.schemas</resource>
-                   				 </transformer>
+                                </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/spring.handlers</resource>
+                                </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/spring.schemas</resource>
+                                </transformer>
                             </transformers>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
-                    		<finalName>simulator</finalName>
+                            <finalName>simulator</finalName>
                         </configuration>
                     </execution>
                 </executions>
@@ -125,6 +128,28 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.6.16</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.applerao</groupId>
+            <artifactId>hibernatesqlite</artifactId>
+            <version>1.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.h2database</groupId>
+            <artifactId>h2database</artifactId>
+            <version>1.0.20061217</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.168</version>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -132,6 +157,10 @@
             <id>OSS Staging</id>
             <name>Sonatype Staging Repository</name>
             <url>http://oss.sonatype.org/content/groups/staging/</url>
+        </repository>
+        <repository>
+            <id>hibernatesqlite-maven</id>
+            <url>https://hibernate-sqlite.googlecode.com/svn/trunk/mavenrepo</url>
         </repository>
     </repositories>
 </project>
