--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -1,4 +1,5 @@
-database.driverClassName=org.postgresql.Driver
-database.url=jdbc:postgresql://localhost:5432/ags
-database.username=ags_user
-database.password=ags_user
+database.driverClassName=org.h2.Driver
+#database.url=jdbc:h2:etc/database/test
+database.url=jdbc:h2:etc/database/ags;INIT=CREATE SCHEMA IF NOT EXISTS ags
+database.username=
+database.password=
