[1867176] Partial support for creating burstcontrol.txt. Using velocity.

--- a/src/main/resources/config/burstapp.properties
+++ b/src/main/resources/config/burstapp.properties
@@ -1,2 +1,3 @@
-burstsimulator.path=C:/Users/Madis/Projects/temp/BurstSimulator/
-burstsimulator.fileName=Burstsimulator.exe
+burstapp.path=C:/Users/Madis/Projects/temp/BurstSimulator/
+burstapp.fileName=Burstsimulator.exe
+burstapp.configPath=burstcontrol.txt
