--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,12 @@
             <artifactId>h2</artifactId>
             <version>1.3.168</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
