[1867207] - Added parsing result and persisting to database, also fixed some minor bugs, like adding correct date etc.

--- a/src/main/resources/config/burstapp.properties
+++ b/src/main/resources/config/burstapp.properties
@@ -1,3 +1,4 @@
-burstapp.path=C:/Users/Madis/Projects/temp/BurstSimulator/
-burstapp.fileName=Burstsimulator.exe
+burstapp.path=C:/Users/Jaanuss/Desktop/burst/
+burstapp.fileName=burst_simulator.exe
 burstapp.configPath=burstcontrol.txt
+burstapp.outputFile=simulation_output.xl
