--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,20 @@
     <groupId>ee.ut.physic.aerosol.simulator</groupId>
     <artifactId>aerosol-simulator</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <verbose>true</verbose>
+                    <compilerVersion>1.3</compilerVersion>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -157,7 +169,6 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.6.16</version>
         </dependency>
-
         <dependency>
             <groupId>com.applerao</groupId>
             <artifactId>hibernatesqlite</artifactId>
