--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -1,5 +1,6 @@
+#database.driverClassName=org.sqlite.JDBC
+#database.url=jdbc:sqlite:etc/database/ags.db
 database.driverClassName=org.h2.Driver
-#database.url=jdbc:h2:etc/database/test
 database.url=jdbc:h2:etc/database/ags;INIT=CREATE SCHEMA IF NOT EXISTS ags
 database.username=
 database.password=
