[1929724] Copy /etc on "mvn install". [1861962] Use the binary file from /etc. Get path to the stuff that are out of the jar (currently only /etc) for normal compiled code vs compiled code into jar differently. First one assumes that class file is in <where etc directory is>/target/classes, the latter assumes the class files are in the same directory as where the etc directory is.

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,35 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/etc</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>etc</directory>
+                                    <filtering>false</filtering>
+                                    <excludes>
+                                        <exclude>**/*.txt</exclude>
+                                        <exclude>**/*.xl</exclude>
+                                        <exclude>**/*.db</exclude>
+                                    </excludes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
 
 
@@ -239,7 +268,8 @@
         <snapshotRepository>
             <id>nexus</id>
             <name>Internal Snapshots</name>
-            <url>http://ec2-54-246-2-243.eu-west-1.compute.amazonaws.com:8081/nexus/content/repositories/snapshots/</url>
+            <url>http://ec2-54-246-2-243.eu-west-1.compute.amazonaws.com:8081/nexus/content/repositories/snapshots/
+            </url>
         </snapshotRepository>
     </distributionManagement>
     <repositories>
