--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
             <version>1.0.1.Final</version>
         </dependency>
         <dependency>
+            <groupId>hibernate</groupId>
+            <artifactId>antlr</artifactId>
+            <version>2.7.5H3</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>3.1.2.RELEASE</version>
