[1866709] Migrated to Java based Spring Configuration in order to more dynamically load user settings outside of the jar.

--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -1,4 +1,5 @@
 database.driverClassName=org.sqlite.JDBC
-database.url=jdbc:sqlite:etc/database/ags.db
+database.protocol=jdbc:sqlite:
+database.defaultUrl=jdbc:sqlite:etc/database/ags.db
 database.username=
 database.password=
