--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,11 @@
             <version>3.1.2.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>4.1.6.Final</version>
