[1866709] It's now possible for the user to set the database file path in etc/conf/settings.properties. Fixed getting the right database file path by converting it to absolute path when it does not start with slash (mean it was relative - maybe not perfect for Windows, though)

--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -1,5 +1,5 @@
 database.driverClassName=org.sqlite.JDBC
 database.protocol=jdbc:sqlite:
-database.defaultUrl=jdbc:sqlite:etc/database/ags.db
+database.defaultPath=etc/database/ags.db
 database.username=
 database.password=
